# CPPlayground

./: .editorconfig  .gitignore  CMakeLists.txt  Dependencies.cmake  LICENSE  README.md  build.bat  build.cmake  build_mingw.bat  clean.bat  clean.cmake  test.cmake
.github/workflows/: cmake-multi-platform.yml
beej_play_with_sockets/: CMakeLists.txt  README.md  client.c  client_windows.c  client_windows.cpp  listener.c  listener_windows.cpp  server.c  server_windows.c  server_windows.cpp  showip.c  showip_windows.cpp  talker.c  talker_windows.cpp
fixed_point/: CMakelists.txt  fixed_point.h  test_fixed_point.cpp
gtest/: CMakeLists.txt  README.md  main.cpp  test.cpp
pointers/: CMakeLists.txt  DummyRaw.h  DummyShared.h  DummyUnique.h  TrackedInt.h  demo_object.h  main.cpp  test_pointers.cpp
raii_utils/: CMakeLists.txt  FileHandle.h  README.md  SimpleSocket.h  SimpleSocket_windows.cpp  main.cpp  try_sockets.cpp  try_sockets_common.h  try_sockets_linux.cpp  try_sockets_windows.cpp
sample/: CMakeLists.txt  README.md  main.cpp
string_utilities/: CMakeLists.txt  README.md  string_demo.cpp  string_utilities.cpp  string_utilities.h  test_string_utilities.cpp
