if(WIN32)
    set(SHOWIP_SOURCE showip_windows.cpp)
    set(SERVER_SOURCE server_windows.cpp)
    set(CLIENT_SOURCE client_windows.cpp)
    set(SOCKET_LIBS ws2_32)
    message(STATUS "Building beej_play_with_sockets for Windows")
    else()
    set(SHOWIP_SOURCE showip.c)
    set(SERVER_SOURCE server.c)
    set(CLIENT_SOURCE client.c)
    set(SOCKET_LIBS)
    message(STATUS "Building beej_play_with_sockets for Linux/POSIX")
endif()

add_executable(showip ${SHOWIP_SOURCE})
add_executable(server ${SERVER_SOURCE})
add_executable(client ${CLIENT_SOURCE})

target_link_libraries(showip ${SOCKET_LIBS})
target_link_libraries(server ${SOCKET_LIBS} kernel32)
target_link_libraries(client ${SOCKET_LIBS})