if(WIN32)
    set(SHOWIP_SOURCE showip_windows.cpp)
    set(SERVER_SOURCE server_windows.cpp)
    set(CLIENT_SOURCE client_windows.cpp)
    set(TALKER_SOURCE talker_windows.cpp)
    set(LISTENER_SOURCE listener_windows.cpp)
    set(SOCKET_LIBS ws2_32)
    message(STATUS "Building beej_play_with_sockets for Windows")
    else()
    set(SHOWIP_SOURCE showip.c)
    set(SERVER_SOURCE server.c)
    set(CLIENT_SOURCE client.c)
    set(LISTENER_SOURCE listener.c)
    set(TALKER_SOURCE talker.c)
    set(SOCKET_LIBS)
    message(STATUS "Building beej_play_with_sockets for Linux/POSIX")
endif()

add_executable(showip ${SHOWIP_SOURCE})
add_executable(server ${SERVER_SOURCE})
add_executable(client ${CLIENT_SOURCE})
add_executable(listener ${LISTENER_SOURCE})
add_executable(talker ${TALKER_SOURCE})

target_link_libraries(showip PRIVATE SimpleSocket)
target_link_libraries(server PRIVATE SimpleSocket kernel32)
target_link_libraries(client PRIVATE SimpleSocket)
target_link_libraries(listener PRIVATE SimpleSocket)
target_link_libraries(talker PRIVATE SimpleSocket)